content/boundary/v0.13.x/content/docs/commands/accounts/list.mdx
---
layout: docs
page_title: accounts list - Command
description: |-
  The "accounts list" command lets Boundary admin list an account resource.
# START AUTO GENERATED METADATA, DO NOT EDIT
created_at: 2025-10-29T10:56:20-04:00
last_modified: 2025-10-29T10:56:20-04:00
# END AUTO GENERATED METADATA
---

# accounts list

Command: `boundary accounts list`

The `accounts list` command lists all accounts created for a given auth method.

## Example

The following example lists all accounts for an auth method with ID, `ampw_1234567890`:

```shell-session
$ boundary accounts list -auth-method-id ampw_1234567890
```

**Example output:**

<CodeBlockConfig hideClipboard>

```plaintext
Account information:
  ID:                    acctpw_0987654321
    Version:             1
    Type:                password
    Authorized Actions:
      no-op
      read
      update
      delete
      set-password
      change-password

  ID:                    acctpw_1234567890
    Version:             5
    Type:                password
    Authorized Actions:
      no-op
      read
      update
      delete
      set-password
      change-password
```

</CodeBlockConfig>

## Usage

<CodeBlockConfig hideClipboard>

```shell-session
$ boundary accounts list [options] [args]
```

</CodeBlockConfig>

### Command options

- `-auth-method-id` `(string: "")` - The auth-method resource from which to list accounts. You can also specify the auth-method resource using the **BOUNDARY_AUTH_METHOD_ID**
   environment variable.
- `-filter` `(string: "")` - If set, the list operation is filtered before
   being returned. The filter operates against each item in the list. We recommend using
   single quotes, because filters contain double quotes.

@include 'cmd-option-note.mdx'